# Traning_DB

./: README.md
Учебная БД/: app.py  config.py  pyproject.toml
Учебная БД/query/: client.py  product.py  product_type.py  recived.py  sale.py  unit.py  util.py
Учебная БД/sql/: database.sql  post.sql
Учебная БД/static/css/: analysis.css  edit.css  header.css
Учебная БД/static/js/: analysis.js  util.js
Учебная БД/static/js/edit_data/: client.js  index.js  invoice.js  product.js  sale.js  util.js
Учебная БД/templates/: analysis.html  base.html  edit.html  header.html
