[tool.poetry]
name = "news"
version = "0.1.0"
description = "news news"
authors = ["KAPASHEVMS <mirlik2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
